--- a/lang/c/src/Makefile.am
+++ b/lang/c/src/Makefile.am
@@ -8,12 +8,14 @@ pkgconfig_DATA = avro-c.pc
 
 nobase_include_HEADERS = avro.h \
 avro/consumer.h \
+avro/data.h \
 avro/refcount.h
 
 lib_LTLIBRARIES = libavro.la
 libavro_la_SOURCES = st.c st.h schema.c schema.h schema_equal.c \
 datum.c datum_equal.c datum_validate.c datum_read.c datum_skip.c datum_write.c datum_size.c datum.h \
 datum_json.c \
+array.c \
 consumer.c resolver.c \
 io.c dump.c dump.h encoding_binary.c \
 allocation.h allocation.c \
