--- a/lang/c/tests/Makefile.am
+++ b/lang/c/tests/Makefile.am
@@ -5,11 +5,15 @@ ACLOCAL_AMFLAGS=-I m4
 
 EXTRA_DIST=schema_tests test_valgrind
 
-check_PROGRAMS=test_avro_schema test_avro_schema_names test_avro_data test_cpp
+check_PROGRAMS=test_avro_schema test_avro_schema_names test_avro_data test_cpp \
+test_data_structures
 
 noinst_PROGRAMS=generate_interop_data test_interop_data performance
 
 test_LDADD=$(top_builddir)/src/libavro.la
+
+test_data_structures_SOURCES=test_data_structures.c
+test_data_structures_LDADD=$(test_LDADD)
 
 test_avro_schema_SOURCES=test_avro_schema.c
 test_avro_schema_LDADD=$(test_LDADD)
