--- a/lang/c/tests/.gitignore
+++ b/lang/c/tests/.gitignore
@@ -6,3 +6,8 @@ test_avro_schema_names
 test_cpp
 test_data_structures
 test_interop_data
+
+test_specific
+specific_list.h
+specific_list.c
+specific_list.def
