--- a/lang/c/tests/Makefile.am
+++ b/lang/c/tests/Makefile.am
@@ -3,10 +3,12 @@ AM_CPPFLAGS=-I$(top_srcdir)/src
 AM_CFLAGS=-Wall -Wextra -Wunused-parameter
 ACLOCAL_AMFLAGS=-I m4
 
+BUILT_SOURCES=
 EXTRA_DIST=schema_tests test_valgrind
 
 check_PROGRAMS=test_avro_schema test_avro_schema_names test_avro_data test_cpp \
-test_data_structures
+test_data_structures \
+test_specific
 
 noinst_PROGRAMS=generate_interop_data test_interop_data performance
 
@@ -35,6 +37,16 @@ performance_LDADD=$(test_LDADD)
 
 test_interop_data_SOURCES=test_interop_data.c
 test_interop_data_LDADD=$(test_LDADD)
+
+test_specific_SOURCES=test_specific.c
+nodist_test_specific_SOURCES= \
+    specific_list.h specific_list.c specific_list.def
+BUILT_SOURCES += $(nodist_test_specific_SOURCES)
+test_specific_LDADD=$(test_LDADD)
+EXTRA_DIST += list.avsc
+
+specific_list.h specific_list.c specific_list.def: list.avsc ../src/avrocc
+	../src/avrocc -f specific_ -O . -t specific $<
 
 # Skip the valgrind test for now; we'll turn this back on once we commit
 # a fix for AVRO-766.
