Schema-specific union functions
This patch adds a handful of functions for handling the schema-specific
types that we generate for union schemas.  There's a _clear() function,
which resets the union instance to not point at any branch.  There are
also _set_foo() functions for each branch in the union; these ensure
that the union instance current contains an instance of the given
branch, initializing the branch object if necessary.  If the union
already contains that branch, nothing happens.

--- a/lang/c/src/avro/specific/done.c.in
+++ b/lang/c/src/avro/specific/done.c.in
@@ -136,7 +136,7 @@
 
 
 #define AVRO_UNION_START(tp, name) \
-	void tp##_##name##_done(tp##_##name##_t *obj) \
+	void tp##_##name##_clear(tp##_##name##_t *obj) \
 	{
 
 #define AVRO_UNION_BRANCH(tp, name, index, btype, bref, first, last) \
@@ -147,6 +147,11 @@
 
 #define AVRO_UNION_END(tp, name) \
 		obj->discriminant = -1; \
+	} \
+	\
+	void tp##_##name##_done(tp##_##name##_t *obj) \
+	{ \
+		tp##_##name##_clear(obj); \
 	} \
 	\
 	void tp##_##name##_free(tp##_##name##_t *obj) \
@@ -186,6 +191,23 @@ SCHEMA_DEFINITION()
 #undef AVRO_TYPE_REF_record
 #undef AVRO_TYPE_REF_recursive
 #undef AVRO_TYPE_REF_union
+
+#undef AVRO_TYPE_NAME
+#undef AVRO_TYPE_NAME_boolean
+#undef AVRO_TYPE_NAME_bytes
+#undef AVRO_TYPE_NAME_float
+#undef AVRO_TYPE_NAME_double
+#undef AVRO_TYPE_NAME_int
+#undef AVRO_TYPE_NAME_long
+#undef AVRO_TYPE_NAME_null
+#undef AVRO_TYPE_NAME_string
+#undef AVRO_TYPE_NAME_array
+#undef AVRO_TYPE_NAME_enum
+#undef AVRO_TYPE_NAME_fixed
+#undef AVRO_TYPE_NAME_map
+#undef AVRO_TYPE_NAME_record
+#undef AVRO_TYPE_NAME_recursive
+#undef AVRO_TYPE_NAME_union
 
 #undef AVRO_TYPE_DONE
 #undef AVRO_TYPE_DONE_boolean
