Public memoization API
The resolver class memoizes the results of its schema resolution
algorithm, which allows us to support recursive schemas; if we didn't do
this, we'd get an infinite loop, since we'd repeatedly drill down into
the recursive cycle of schema references while trying to resolve child
schemas.  In turns out we'll need this behavior in the schema-specific
resolvers, too, so this patch extracts the memoization behavior out into
a separate public API.  For now, it's hard-coded to use two pointer
parameters as the memoization key.  We can expand this if needed, but it
serves our purposes for now.

--- a/lang/c/src/Makefile.am
+++ b/lang/c/src/Makefile.am
@@ -22,7 +22,7 @@ libavro_la_SOURCES = st.c st.h schema.c schema.h schema_equal.c \
 schema_specific.c \
 datum.c datum_equal.c datum_validate.c datum_read.c datum_skip.c datum_write.c datum_size.c datum.h \
 datum_json.c \
-array.c map.c string.c \
+array.c map.c memoize.c string.c \
 consumer.c resolver.c \
 io.c dump.c dump.h encoding_binary.c \
 allocation.c \
