Schema-specific array and map accessors
This patch adds accessor and mutator functions for the schema-specific
types that are generated for Avro arrays and maps.  The implementations
delegate to the corresponding functions of the avro_raw_array_t and
avro_raw_map_t classes.

--- a/lang/c/src/avro/specific.h.in
+++ b/lang/c/src/avro/specific.h.in
@@ -129,6 +129,10 @@
 #error Must provide a SCHEMA_DEFINITION macro.
 #endif
 
+#include <avro.h>
+#include <avro/consumer.h>
+#include <avro/data.h>
+
 #include <avro/specific/typedef.h.in>
 #include <avro/specific/lifecycle.h.in>
-#include <avro/specific/union.h.in>
+#include <avro/specific/accessors.h.in>
