--- a/lang/c/tests/Makefile.am
+++ b/lang/c/tests/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS=-Wall -Wextra -Wunused-parameter
 ACLOCAL_AMFLAGS=-I m4
 
 BUILT_SOURCES=
+CLEANFILES=
 EXTRA_DIST=schema_tests test_valgrind
 
 check_PROGRAMS=test_avro_schema test_avro_schema_names test_avro_data test_cpp \
@@ -42,6 +43,7 @@ test_specific_SOURCES=test_specific.c
 nodist_test_specific_SOURCES= \
     specific_list.h specific_list.c specific_list.def
 BUILT_SOURCES += $(nodist_test_specific_SOURCES)
+CLEANFILES += $(nodist_test_specific_SOURCES)
 test_specific_LDADD=$(test_LDADD)
 EXTRA_DIST += list.avsc
 
