--- a/lang/c/src/Makefile.am
+++ b/lang/c/src/Makefile.am
@@ -12,8 +12,12 @@ avro/consumer.h \
 avro/data.h \
 avro/refcount.h \
 avro/specific.h.in avro/specific.c.in \
+avro/specific/array.c.in \
 avro/specific/done.c.in \
 avro/specific/init.c.in \
+avro/specific/map.c.in \
+avro/specific/union_set.c.in \
+avro/specific/accessors.h.in \
 avro/specific/lifecycle.h.in \
 avro/specific/typedef.h.in
 
