--- a/lang/c/src/avro/specific.c.in
+++ b/lang/c/src/avro/specific.c.in
@@ -31,6 +31,12 @@
 #error Must provide a SCHEMA_DEFINITION macro.
 #endif
 
+#include <avro.h>
+#include <avro/consumer.h>
+#include <avro/data.h>
+
 #include <avro/specific/init.c.in>
 #include <avro/specific/done.c.in>
+#include <avro/specific/array.c.in>
+#include <avro/specific/map.c.in>
 #include <avro/specific/union_set.c.in>
