--- a/lang/c/src/avro/specific.h.in
+++ b/lang/c/src/avro/specific.h.in
@@ -132,6 +132,7 @@
 #include <avro.h>
 #include <avro/consumer.h>
 #include <avro/data.h>
+#include <avro/specific.h>
 
 #include <avro/specific/typedef.h.in>
 #include <avro/specific/lifecycle.h.in>
