Equality functions for schema-specific types
This patch adds an equality function for each of the schema-specific
types.  Unlike the avro_datum_t equality function, we don't have to
check the schemas at all, since the C type checker will ensure that we
have instances of the same schema type.

--- a/lang/c/src/avro/specific.h.in
+++ b/lang/c/src/avro/specific.h.in
@@ -129,11 +129,18 @@
 #error Must provide a SCHEMA_DEFINITION macro.
 #endif
 
+#include <errno.h>
+#include <stdint.h>
+#include <stdlib.h>
+#include <string.h>
+
 #include <avro.h>
 #include <avro/consumer.h>
 #include <avro/data.h>
+#include <avro/errors.h>
 #include <avro/specific.h>
 
 #include <avro/specific/typedef.h.in>
 #include <avro/specific/lifecycle.h.in>
 #include <avro/specific/accessors.h.in>
+#include <avro/specific/comparison.h.in>
