--- a/lang/c/src/avro/specific.c.in
+++ b/lang/c/src/avro/specific.c.in
@@ -31,9 +31,15 @@
 #error Must provide a SCHEMA_DEFINITION macro.
 #endif
 
+#include <errno.h>
+#include <stdint.h>
+#include <stdlib.h>
+#include <string.h>
+
 #include <avro.h>
 #include <avro/consumer.h>
 #include <avro/data.h>
+#include <avro/errors.h>
 #include <avro/specific.h>
 
 #include <avro/specific/init.c.in>
@@ -41,3 +47,4 @@
 #include <avro/specific/array.c.in>
 #include <avro/specific/map.c.in>
 #include <avro/specific/union_set.c.in>
+#include <avro/specific/comparison.c.in>
