--- a/lang/c/src/avro/specific/comparison.c.in
+++ b/lang/c/src/avro/specific/comparison.c.in
@@ -16,13 +16,12 @@
  */
 
 #include <stdint.h>
-#include <string.h>
 
-#include <avro/allocation.h>
 #include <avro/data.h>
 
 /*
- * This file implements the _done and _free functions.
+ * This file creates function prototypes for various comparison
+ * operations for schema-specific types.
  */
 
 
@@ -68,116 +67,179 @@
 #define AVRO_TYPE_NAME_union(ref)           ref
 
 
-#define AVRO_TYPE_DONE(tp, type, ref, name)  AVRO_TYPE_DONE_##type(tp, ref, name)
+#define AVRO_EQUALS(tp, type, ref, e1, e2)  AVRO_EQUALS_##type(tp, ref, e1, e2)
 
-#define AVRO_TYPE_DONE_boolean(tp, ref, name)  /* nothing to do */
-#define AVRO_TYPE_DONE_bytes(tp, ref, name)    avro_raw_string_done(&obj->name)
-#define AVRO_TYPE_DONE_float(tp, ref, name)    /* nothing to do */
-#define AVRO_TYPE_DONE_double(tp, ref, name)   /* nothing to do */
-#define AVRO_TYPE_DONE_int(tp, ref, name)      /* nothing to do */
-#define AVRO_TYPE_DONE_long(tp, ref, name)     /* nothing to do */
-#define AVRO_TYPE_DONE_null(tp, ref, name)     /* nothing to do */
-#define AVRO_TYPE_DONE_string(tp, ref, name)   avro_raw_string_done(&obj->name)
+#define AVRO_EQUALS_boolean(tp, ref, e1, e2) \
+	avro_raw_boolean_equals(e1, e2)
+#define AVRO_EQUALS_bytes(tp, ref, e1, e2) \
+	avro_raw_bytes_equals(e1, e2)
+#define AVRO_EQUALS_float(tp, ref, e1, e2) \
+	avro_raw_float_equals(e1, e2)
+#define AVRO_EQUALS_double(tp, ref, e1, e2) \
+	avro_raw_double_equals(e1, e2)
+#define AVRO_EQUALS_int(tp, ref, e1, e2) \
+	avro_raw_int_equals(e1, e2)
+#define AVRO_EQUALS_long(tp, ref, e1, e2) \
+	avro_raw_long_equals(e1, e2)
+#define AVRO_EQUALS_null(tp, ref, e1, e2) \
+	avro_raw_null_equals(e1, e2)
+#define AVRO_EQUALS_string(tp, ref, e1, e2) \
+	avro_raw_string_equals(e1, e2)
 
-#define AVRO_TYPE_DONE_array(tp, ref, name)      tp##_array_##ref##_done(&obj->name)
-#define AVRO_TYPE_DONE_enum(tp, ref, name)       /* nothing to do */
-#define AVRO_TYPE_DONE_fixed(tp, ref, name)      tp##_##ref##_done(&obj->name)
-#define AVRO_TYPE_DONE_map(tp, ref, name)        tp##_map_##ref##_done(&obj->name)
-#define AVRO_TYPE_DONE_record(tp, ref, name)     tp##_##ref##_done(&obj->name)
-#define AVRO_TYPE_DONE_recursive(tp, ref, name) \
-	if (obj->name) { tp##_##ref##_free(obj->name); obj->name = NULL; }
-#define AVRO_TYPE_DONE_union(tp, ref, name)      tp##_##ref##_done(&obj->name)
+#define AVRO_EQUALS_array(tp, ref, e1, e2) \
+	tp##_array_##ref##_equals(e1, e2)
+#define AVRO_EQUALS_enum(tp, ref, e1, e2) \
+	tp##_##ref##_equals(e1, e2)
+#define AVRO_EQUALS_fixed(tp, ref, e1, e2) \
+	tp##_##ref##_equals(e1, e2)
+#define AVRO_EQUALS_map(tp, ref, e1, e2) \
+	tp##_map_##ref##_equals(e1, e2)
+#define AVRO_EQUALS_record(tp, ref, e1, e2) \
+	tp##_##ref##_equals(e1, e2)
+#define AVRO_EQUALS_recursive(tp, ref, e1, e2) \
+	tp##_##ref##_equals(*e1, *e2)
+#define AVRO_EQUALS_union(tp, ref, e1, e2) \
+	tp##_##ref##_equals(e1, e2)
 
 
 /* Define the macros that can be used in SCHEMA_DEFINITION */
 
 #define AVRO_ARRAY(tp, name, itype, iref) \
-	void tp##_array_##name##_done(tp##_array_##name##_t *obj) \
+	int \
+	tp##_array_##name##_equals(const tp##_array_##name##_t *obj1, \
+				   const tp##_array_##name##_t *obj2) \
 	{ \
-		tp##_array_##name##_clear(obj); \
-		avro_raw_array_done(&obj->array); \
-	} \
-	\
-	void tp##_array_##name##_free(tp##_array_##name##_t *obj) \
-	{ \
-		tp##_array_##name##_done(obj); \
-		avro_freet(AVRO_TYPE_REF_array(tp, name), obj); \
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		} \
+		size_t  size1 = tp##_array_##name##_size(obj1); \
+		size_t  size2 = tp##_array_##name##_size(obj2); \
+		if (size1 != size2) { \
+			return 0; \
+		} \
+		size_t  i; \
+		for (i = 0; i < size1; i++) { \
+			AVRO_TYPE_REF(tp, itype, iref)  *e1 = \
+			    tp##_array_##name##_get(obj1, i); \
+			AVRO_TYPE_REF(tp, itype, iref)  *e2 = \
+			    tp##_array_##name##_get(obj2, i); \
+			if (!AVRO_EQUALS(tp, itype, iref, e1, e2)) { \
+				return 0; \
+			} \
+		} \
+		return 1; \
 	}
 
+#define AVRO_ENUM_START(tp, name) \
+	int \
+	tp##_##name##_equals(const tp##_##name##_t *obj1, \
+			     const tp##_##name##_t *obj2) \
+	{ \
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		} \
+		return *obj1 == *obj2; \
+	}
 
 #define AVRO_FIXED(tp, name, size) \
-	void tp##_##name##_done(tp##_##name##_t *obj) \
+	int \
+	tp##_##name##_equals(const tp##_##name##_t *obj1, \
+			     const tp##_##name##_t *obj2) \
 	{ \
-		memset(obj->contents, 0, size); \
-	} \
-	\
-	void tp##_##name##_free(tp##_##name##_t *obj) \
-	{ \
-		tp##_##name##_done(obj); \
-		avro_freet(AVRO_TYPE_REF_fixed(tp, name), obj); \
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		} \
+		return (memcmp(obj1->contents, obj2->contents, size) == 0); \
 	}
-
 
 #define AVRO_MAP(tp, name, itype, iref) \
-	void tp##_map_##name##_done(tp##_map_##name##_t *obj) \
+	int \
+	tp##_map_##name##_equals(const tp##_map_##name##_t *obj1, \
+				 const tp##_map_##name##_t *obj2) \
 	{ \
-		tp##_map_##name##_clear(obj); \
-		avro_raw_map_done(&obj->map); \
-	} \
-	\
-	void tp##_map_##name##_free(tp##_map_##name##_t *obj) \
-	{ \
-		tp##_map_##name##_done(obj); \
-		avro_freet(AVRO_TYPE_REF_map(tp, name), obj); \
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		} \
+		size_t  size1 = tp##_map_##name##_size(obj1); \
+		size_t  size2 = tp##_map_##name##_size(obj2); \
+		if (size1 != size2) { \
+			return 0; \
+		} \
+		size_t  i; \
+		for (i = 0; i < size1; i++) { \
+			AVRO_TYPE_REF(tp, itype, iref)  *e1 = \
+			    tp##_map_##name##_get_by_index(obj1, i); \
+			AVRO_TYPE_REF(tp, itype, iref)  *e2 = \
+			    tp##_map_##name##_get_by_index(obj2, i); \
+			if (!AVRO_EQUALS(tp, itype, iref, e1, e2)) { \
+				return 0; \
+			} \
+		} \
+		return 1; \
 	}
-
 
 #define AVRO_RECORD_START(tp, name) \
-	void tp##_##name##_done(tp##_##name##_t *obj) \
+	int \
+	tp##_##name##_equals(const tp##_##name##_t *obj1, \
+			     const tp##_##name##_t *obj2) \
 	{ \
-		(void) obj;
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		}
 
 #define AVRO_RECORD_FIELD(tp, name, field, ftype, fref, first, last) \
-		AVRO_TYPE_DONE(tp, ftype, fref, field);
+		if (!AVRO_EQUALS \
+		     (tp, ftype, fref, &obj1->field, &obj2->field)) { \
+			return 0; \
+		}
 
 #define AVRO_RECORD_END(tp, name) \
-	} \
-	\
-	void tp##_##name##_free(tp##_##name##_t *obj) \
-	{ \
-		tp##_##name##_done(obj); \
-		avro_freet(AVRO_TYPE_REF_record(tp, name), obj); \
+		return 1; \
 	}
 
-
 #define AVRO_UNION_START(tp, name) \
-	void tp##_##name##_clear(tp##_##name##_t *obj) \
-	{
+	int \
+	tp##_##name##_equals(const tp##_##name##_t *obj1, \
+			     const tp##_##name##_t *obj2) \
+	{ \
+		if (obj1 == obj2) { \
+			return 1; \
+		} \
+		if (!obj1 || !obj2) { \
+			return 0; \
+		} \
+		if (obj1->discriminant != obj2->discriminant) { \
+			return 0; \
+		}
 
 #define AVRO_UNION_BRANCH(tp, name, index, btype, bref, first, last) \
-		if (obj->discriminant == index) { \
-			AVRO_TYPE_DONE(tp, btype, bref, \
-				       branch.AVRO_TYPE_NAME(btype, bref)); \
+		if (obj1->discriminant == index) { \
+			return AVRO_EQUALS \
+			    (tp, btype, bref, \
+			     &obj1->branch.AVRO_TYPE_NAME(btype, bref), \
+			     &obj2->branch.AVRO_TYPE_NAME(btype, bref)); \
 		}
 
 #define AVRO_UNION_END(tp, name) \
-		obj->discriminant = -1; \
-	} \
-	\
-	void tp##_##name##_done(tp##_##name##_t *obj) \
-	{ \
-		tp##_##name##_clear(obj); \
-	} \
-	\
-	void tp##_##name##_free(tp##_##name##_t *obj) \
-	{ \
-		tp##_##name##_done(obj); \
-		avro_freet(AVRO_TYPE_REF_union(tp, name), obj); \
+		return 0; \
 	}
 
-
 #define AVRO_FORWARD(tp, type, name)                                  /* nothing */
-#define AVRO_ENUM_START(tp, name)                                     /* nothing */
 #define AVRO_ENUM_SYMBOL(TP, NAME, symbol, value, first, last)        /* nothing */
 #define AVRO_ENUM_END(tp, name)                                       /* nothing */
 
@@ -223,22 +285,22 @@ SCHEMA_DEFINITION()
 #undef AVRO_TYPE_NAME_recursive
 #undef AVRO_TYPE_NAME_union
 
-#undef AVRO_TYPE_DONE
-#undef AVRO_TYPE_DONE_boolean
-#undef AVRO_TYPE_DONE_bytes
-#undef AVRO_TYPE_DONE_float
-#undef AVRO_TYPE_DONE_double
-#undef AVRO_TYPE_DONE_int
-#undef AVRO_TYPE_DONE_long
-#undef AVRO_TYPE_DONE_null
-#undef AVRO_TYPE_DONE_string
-#undef AVRO_TYPE_DONE_array
-#undef AVRO_TYPE_DONE_enum
-#undef AVRO_TYPE_DONE_fixed
-#undef AVRO_TYPE_DONE_map
-#undef AVRO_TYPE_DONE_record
-#undef AVRO_TYPE_DONE_recursive
-#undef AVRO_TYPE_DONE_union
+#undef AVRO_EQUALS
+#undef AVRO_EQUALS_boolean
+#undef AVRO_EQUALS_bytes
+#undef AVRO_EQUALS_float
+#undef AVRO_EQUALS_double
+#undef AVRO_EQUALS_int
+#undef AVRO_EQUALS_long
+#undef AVRO_EQUALS_null
+#undef AVRO_EQUALS_string
+#undef AVRO_EQUALS_array
+#undef AVRO_EQUALS_enum
+#undef AVRO_EQUALS_fixed
+#undef AVRO_EQUALS_map
+#undef AVRO_EQUALS_record
+#undef AVRO_EQUALS_recursive
+#undef AVRO_EQUALS_union
 
 #undef AVRO_FORWARD
 #undef AVRO_ARRAY
