--- a/lang/c/src/avro/specific/comparison.h.in
+++ b/lang/c/src/avro/specific/comparison.h.in
@@ -20,30 +20,28 @@
 #include <avro/data.h>
 
 /*
- * This file creates function prototypes for the _init, _done, _new, and
- * _free function.
+ * This file creates function prototypes for various comparison
+ * operations for schema-specific types.
  */
 
 
 /* Define some helper macros */
 
-#define AVRO_LIFECYCLE(basename) \
-	void basename##_init(basename##_t *obj); \
-	void basename##_done(basename##_t *obj); \
-	basename##_t *basename##_new(void); \
-	void basename##_free(basename##_t *obj);
+#define AVRO_COMPARISON(basename) \
+	int basename##_equals(const basename##_t *val1, \
+			      const basename##_t *val2);
 
 
 /* Define the macros that can be used in SCHEMA_DEFINITION */
 
-#define AVRO_ARRAY(tp, name, itype, iref)   AVRO_LIFECYCLE(tp##_array_##name)
-#define AVRO_FIXED(tp, name, size)          AVRO_LIFECYCLE(tp##_##name)
-#define AVRO_MAP(tp, name, itype, iref)     AVRO_LIFECYCLE(tp##_map_##name)
-#define AVRO_RECORD_START(tp, name)         AVRO_LIFECYCLE(tp##_##name)
-#define AVRO_UNION_START(tp, name)          AVRO_LIFECYCLE(tp##_##name)
+#define AVRO_ARRAY(tp, name, itype, iref)   AVRO_COMPARISON(tp##_array_##name)
+#define AVRO_ENUM_START(tp, name)           AVRO_COMPARISON(tp##_##name)
+#define AVRO_FIXED(tp, name, size)          AVRO_COMPARISON(tp##_##name)
+#define AVRO_MAP(tp, name, itype, iref)     AVRO_COMPARISON(tp##_map_##name)
+#define AVRO_RECORD_START(tp, name)         AVRO_COMPARISON(tp##_##name)
+#define AVRO_UNION_START(tp, name)          AVRO_COMPARISON(tp##_##name)
 
 #define AVRO_FORWARD(tp, type, name)                                  /* nothing */
-#define AVRO_ENUM_START(tp, name)                                     /* nothing */
 #define AVRO_ENUM_SYMBOL(TP, NAME, symbol, value, first, last)        /* nothing */
 #define AVRO_ENUM_END(tp, name)                                       /* nothing */
 #define AVRO_RECORD_FIELD(tp, name, field, ftype, fref, first, last)  /* nothing */
@@ -59,7 +57,7 @@ SCHEMA_DEFINITION()
 
 /* Undefine everything when we're done */
 
-#undef AVRO_LIFECYCLE
+#undef AVRO_COMPARISON
 
 #undef AVRO_FORWARD
 #undef AVRO_ARRAY
