--- a/lang/c/src/Makefile.am
+++ b/lang/c/src/Makefile.am
@@ -20,10 +20,12 @@ avro/specific/comparison.c.in \
 avro/specific/done.c.in \
 avro/specific/init.c.in \
 avro/specific/map.c.in \
+avro/specific/resolver.c.in \
 avro/specific/union_set.c.in \
 avro/specific/accessors.h.in \
 avro/specific/comparison.h.in \
 avro/specific/lifecycle.h.in \
+avro/specific/resolver.h.in \
 avro/specific/typedef.h.in
 
 lib_LTLIBRARIES = libavro.la
