--- a/lang/c/src/avro/specific.c.in
+++ b/lang/c/src/avro/specific.c.in
@@ -32,6 +32,7 @@
 #endif
 
 #include <errno.h>
+#include <stddef.h>
 #include <stdint.h>
 #include <stdlib.h>
 #include <string.h>
@@ -48,3 +49,4 @@
 #include <avro/specific/map.c.in>
 #include <avro/specific/union_set.c.in>
 #include <avro/specific/comparison.c.in>
+#include <avro/specific/resolver.c.in>
