--- a/lang/c/src/avro/specific/union_set.c.in
+++ b/lang/c/src/avro/specific/union_set.c.in
@@ -131,7 +131,7 @@
 #define AVRO_ENUM_SYMBOL(TP, NAME, symbol, value, first, last)        /* nothing */
 #define AVRO_ENUM_END(tp, name)                                       /* nothing */
 #define AVRO_FIXED(tp, name, size)                                    /* nothing */
-#define AVRO_RECORD_FIELD(tp, name, field, ftype, fref, first, last)  /* nothing */
+#define AVRO_RECORD_FIELD(tp, name, i, field, ftype, fref, first, last)  /* nothing */
 #define AVRO_RECORD_END(tp, name)                                     /* nothing */
 #define AVRO_UNION_START(tp, name)                                    /* nothing */
 #define AVRO_UNION_END(tp, name)                                      /* nothing */
