Schema-specific schemas
This patch adds a function for each schema-specific type the produces an
avro_schema_t representation of the schema.

--- a/lang/c/src/avro/specific.c.in
+++ b/lang/c/src/avro/specific.c.in
@@ -47,6 +47,7 @@
 #include <avro/specific/done.c.in>
 #include <avro/specific/array.c.in>
 #include <avro/specific/map.c.in>
+#include <avro/specific/schema.c.in>
 #include <avro/specific/union_set.c.in>
 #include <avro/specific/comparison.c.in>
 #include <avro/specific/resolver.c.in>
